KPilot Developer's notes for june 9th, 2002
===========================================

Not sure just what Reinhold has been up to recently, but
I know I've been sitting in the sun and relaxing. Mostly.

H==HEAD, B==Branch in the bracketed notes after the patch description.

2002-06-10  Adriaan de Groot
* Using version 4.3.3 in BRANCH for the 3.0.2 release, and
  4.3.4 in HEAD for later.

2002-06-08  Adriaan de Groot
* Conduits, conduits, conduits and documentation, documentation, documentation.
  That's what we need. Sigh.

2002-06-07  Adriaan de Groot
* Patched VCalConduitBase::cleanup() to be careful about
  calling functions on objects that may not be allocated. [H,B]
* Patched VCalConduitBase to use variables from ConduitBase. [H]
* Added tooltip for daemon. Gosh, that's ugly. Should put a
  nicer message in there. [H]

KPilot Developer's notes for may 25th 2002
==========================================

2002-05-23  Adriaan de Groot
* KNotes syncing now really seems to work both ways.
* Time to deal with a lot of little administrative files.
* Fixed tooltips in config dialog.
* KPilotTest now resets after a sync as well.
* Added hooks in LogWidget to allow extra buttons.

2002-05-21  Adriaan de Groot
* Renamed PilotDatabase::cleanUpDatabase() to cleanup(), this
  affected the Serial and Local reimplementations and also the
  abbrowser conduit, which is the only conduit to do the right
  thing and cleanup the database after a sync.
* Added missing close and delete on the databases for plugins.

2002-05-19  Adriaan de Groot
* Time to take a good hard look at the conduits individually.
  We'll start with the notes conduit, since it only does one-
  way syncing. I suspect this will chime in some more testing
  instrumentation in the base classes for conduits, too.
* Changed lots of bitconstants to hex, for clarity.
* Added a FlagLocal to plugin.h with the intent that you can
  then try to sync two _local_ databases -- so you don't even